Improve handling of notes; fix wrapping bug.
* Highlight note when jumping to it, using the :target pseudoclass in CSS.
* Fix annoying bug in wrapLinesUnicode.pl by stripping trailing whitespace from lines.

--- a/style/layout.css
+++ b/style/layout.css
@@ -394,6 +394,10 @@ p.footnote .fnlabel, .par.footnote .fnlabel {
     text-decoration: none;
 }
 
+.apparatusnote:target, .fndiv:target {
+    background-color: #eaf3ff;
+}
+
 /***** Table of Contents *****/
 
 table.tocList {
